[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Subscenes/Paddle.tscn" type="PackedScene" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, 0, 384, -64, 384, -64, -64 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, -64, -64, 704, -64, 640, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 640, 0, 704, -64, 704, 384, 640, 384 )

[node name="World" type="Node2D"]

script/script = ExtResource( 1 )
numLevels = 3
initialLives = 3

[node name="Paddle" parent="." instance=ExtResource( 2 )]

[node name="Walls" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Collision" type="CollisionPolygon2D" parent="Walls"]

build_mode = 0
polygon = Vector2Array( 0, 384, -64, 384, -64, -64, 704, -64, 704, 384, 640, 384, 640, 0, 0, 0 )
shape_range = Vector2( 0, 2 )
trigger = false

[node name="ScoreLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 16.0
margin/right = 96.0
margin/bottom = 30.0
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LivesLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 32.0
margin/right = 96.0
margin/bottom = 46.0
text = "Lives: 3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameOverLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 256.0
margin/top = 176.0
margin/right = 384.0
margin/bottom = 208.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WinLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 256.0
margin/top = 176.0
margin/right = 384.0
margin/bottom = 208.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Congratulations!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


